Sonar cleanup (#374)
Sonar cleanup
* Local variables should not shadow class fields java:S1117
* "Stream.toList()" method should be used instead of "collectors"
  when unmodifiable list needed java:S6204
* Methods should not have identical implementations java:S4144